# articles

./: .gitignore  README.md  poetry.toml  pyproject.toml
.github/ISSUE_TEMPLATE/: article.md
.github/agents/: article-writer.agent.md
.github/workflows/: pages.yml
articles/: TEMPLATE.md
articles/2026-02-cognitive-load/: THESIS.md  draft.md  published.md  references.md
articles/2026-03-between-dogma-and-nothingness/: THESIS.md  draft.md  published.md  references.md
articles/2026-03-cognitive-work-has-recovery-limits/: THESIS.md  draft.md  published.md  references.md
articles/2026-03-crying-is-healing/: THESIS.md  draft.md  published.md  references.md  visuals.md
articles/2026-03-holding-paradox-without-breaking/: THESIS.md  draft.md  published.md  references.md
articles/2026-03-living-without-absolute-answers/: THESIS.md  draft.md  published.md  references.md
articles/2026-03-no-black-box/: THESIS.md  draft.md  published.md  references.md
articles/2026-03-the-burnout-experience/: THESIS.md
articles/2026-03-the-edge-of-reality/: THESIS.md  draft.md  published.md  references.md
articles/2026-03-the-freedom-of-not-knowing/: THESIS.md  draft.md  (+2 more)
instruction-set/: ARTICLE_GENERATOR.md  RESEARCH_GROUNDING.md  VISUALS.md  article_writer.md
mindlint/: cli.py
site/: CNAME  index.html  style.css
specs/: article-structure.spec.md  medium-compliance.spec.md  research.spec.md  visuals.spec.md  voice.spec.md
templates/: article-template.html  article.css  article.md
workflow/: ARTICLE_PIPELINE.md  PUBLISHING_MEDIUM.md  PUBLISHING_WEBSITE.md
(+31 files in other folders)
